navigation mobile fixes

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -60,7 +60,7 @@
 		color: $brand
 
 .fa-bars
-	color: $brand
+	color: #fff
 
 .navbar-toggle
 	// margin-top: 20px
@@ -146,6 +146,10 @@
 		max-width: 300px
 		margin-top: -10px
 
+	.dropdown-content
+		display: block
+		position: relative
+		margin-left: 3rem
 
 @media(max-width: 347px)
 	.navbar
